<resources>
    <string name="app_name">Game</string>
    <string name="play">Play</string>
    <string name="question_1">Enter a text.</string>
    <string name="question_2">What is your guess?</string>
    <string name="text_hint">Text</string>
    <string name="guess_hint">Guess</string>
    <string name="guess_error">Enter a guess.</string>
    <string name="register">Register</string>
    <string name="congratulations">Congratulations!</string>
    <string name="next_match">Next Match</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="retry">Retry</string>
    <string name="error_msg">Something went wrong</string>
</resources>